## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	smoc/smoc_hooking.hpp \
	smoc/smoc_expr.hpp \
	smoc/smoc_event.hpp \
	smoc/detail/VpcInterface.hpp \
	smoc/detail/EventQueue.hpp \
	smoc/detail/DIIQueue.hpp \
	smoc/detail/LatencyQueue.hpp \
	systemoc/detail/smoc_func_call.hpp \
	smoc/detail/DumpingInterfaces.hpp \
	smoc/detail/IOPattern.hpp \
	smoc/detail/IdedObj.hpp \
	smoc/detail/IdPool.hpp \
	systemoc/detail/smoc_port_registry.hpp \
	smoc/detail/IdTAllocRequest.hpp \
	smoc/detail/SimCTXBase.hpp \
	smoc/detail/TransitionHook.hpp \
	smoc/detail/TraceLog.hpp \
	smoc/detail/PortBaseIf.hpp \
	smoc/detail/PortIOBaseIf.hpp \
	systemoc/detail/smoc_root_node.hpp \
	smoc/detail/NamedIdedObj.hpp \
	smoc/detail/ConnectProvider.hpp \
	systemoc/detail/smoc_chan_if.hpp \
	smoc/smoc_simulation_ctx.hpp \
	smoc.hpp \
	systemoc/smoc_elab_and_sim.hpp \
	systemoc/smoc_tt.hpp \
	systemoc/smoc_port.hpp \
	systemoc/smoc_module_name.hpp \
	systemoc/smoc_graph_tt.hpp \
	systemoc/smoc_multireader_fifo.hpp \
	systemoc/smoc_firing_rules.hpp \
	systemoc/smoc_register.hpp \
	systemoc/smoc_periodic_actor.hpp \
	systemoc/smoc_multicast_sr_signal.hpp \
	systemoc/smoc_graph_type.hpp \
	systemoc/smoc_pggen.hpp \
	smoc/detail/QueueFRVWPtr.hpp \
	smoc/detail/EventMapManager.hpp \
	systemoc/detail/smoc_debug_stream.hpp \
	systemoc/detail/smoc_firing_rules_impl.hpp \
	systemoc/detail/smoc_ring_access.hpp \
	smoc/detail/QueueRWPtr.hpp \
	systemoc/detail/smoc_storage.hpp \
	systemoc/detail/smoc_root_chan.hpp \
	systemoc/detail/smoc_sysc_port.hpp \
	systemoc/detail/smoc_fifo_storage.hpp \
	smoc/detail/QueueRVWPtr.hpp \
	systemoc/smoc_node_types.hpp \
	systemoc/smoc_multiplex_fifo.hpp \
	systemoc/smoc_reset.hpp \
	systemoc/smoc_fifo.hpp \
	systemoc/smoc_actor.hpp \
	systemoc/smoc_moc.hpp \
	systemoc/smoc_sr_signal.hpp \
	systemoc/smoc_chan_adapter.hpp
