## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

if SYNTH_SW
  SW_SYNTH_SUBDIR = synthesis-sw
  include $(pkg_synthesis_sw_builddir)/Rules-Synth.mk
endif
if SYNTH_MPI
  MPI_SYNTH_SUBDIR = synthesis-mpi
  include $(pkg_synthesis_mpi_builddir)/Rules-Synth.mk
endif
if SYNTH_TLM
  TLM_SYNTH_SUBDIR = synthesis-tlm
  include $(pkg_synthesis_tlm_builddir)/Rules-Synth.mk
endif

AM_LDFLAGS = @AM_LDFLAGS@ @SYSTEMOC_LDFLAGS@
AM_CPPFLAGS= @AM_CPPFLAGS@ @SYSTEMOC_INCLUDE@ -Wno-deprecated

noinst_PROGRAMS= simulation-fir

simulation_fir_SOURCES= design-fir.cpp
simulation_fir_LDADD =
if PKG_SYSTEMOC_USE_SRCDIR_VERSION
simulation_fir_LDADD += $(SYSTEMOC_LIBPATH)/libsystemoc.la
else
# SYSTEMOC_LIBPATH may not be defined for external libraries
simulation_fir_LDADD += -lsystemoc
endif

# autotest script is build by some source file. #! line is generated by
#  automake to guarantee proper path. Other scripting languages are easy
#  possible, too (e.g., Perl).
noinst_SCRIPTS=autotest.sh

autotest.sh: simulation-fir $(srcdir)/autotest-sh
	rm -f $@
	echo "#!" $(BASH) > $@
	cat autovars.sh $(srcdir)/autotest-sh >> $@
	chmod +x $@

# to check we just call the 'autotest.sh' script
check: autotest.sh
	./autotest.sh

if SYNTH_SW
synth-sw: $(SW_SYNTH_SUBDIR)/smoc-synth-fir
$(SW_SYNTH_SUBDIR)/fir.ast.xml: design-fir.cpp
.PHONY: synth-sw
endif

if SYNTH_MPI
synth-mpi: $(MPI_SYNTH_SUBDIR)/smoc-synth-fir
$(MPI_SYNTH_SUBDIR)/fir.ast.xml: design-fir.cpp
.PHONY: synth-mpi
endif

if SYNTH_TLM
synth-tlm: $(TLM_SYNTH_SUBDIR)/smoc-tlmsynth-all-fir.stamp
.PHONY: synth-tlm
endif
